--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo-1.svg'
 background:         'assets/img/bg.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-# url:                https://davidduan12.github.io
+url:                https://davidduan.ca
 
 # Jekyll
 permalink:          /:title/
@@ -31,9 +31,8 @@ sass:
 
 # Social
 # if you don't have any of social below, comment the line.
-# google:
-#   #plus:            #username
-#   analytics:        UA-128601282-1
+google:
+  analytics:        UA-136114370-1
 email:              davidduan04@gmail.com
 github-url:         davidduan12
 bitbucket:          last-whisper
