--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "This is the personal website for David Duan."
 reading_time:       false
 words_per_minute:   200
 logo:               'assets/img/logo-1.svg'
-background:         'assets/img/bg.jpg'
+background:         'assets/img/BG1.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://davidduan.me
